--- a/admin/index.html
+++ b/admin/index.html
@@ -1,195 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TheWiseSphere | Early-Stage Traffic & Site Impact Exploration</title>
-
-  <meta name="description" content="TheWiseSphere provides preliminary, educational traffic and site impact exploration tools to support early-stage feasibility decisions before engaging licensed professionals." />
-
-  <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-      color: #1f2933;
-      background-color: #f9fafb;
-      line-height: 1.6;
-    }
-
-    header {
-      background: #0f172a;
-      color: #ffffff;
-      padding: 4rem 2rem;
-      text-align: center;
-    }
-
-    header h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-    }
-
-    header p {
-      font-size: 1.1rem;
-      max-width: 900px;
-      margin: 0 auto;
-      opacity: 0.95;
-    }
-
-    section {
-      padding: 3rem 2rem;
-      max-width: 1100px;
-      margin: auto;
-    }
-
-    h2 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 2rem;
-    }
-
-    .card {
-      background: #ffffff;
-      padding: 2rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-    }
-
-    .notice {
-      background: #fff7ed;
-      border-left: 6px solid #f97316;
-      padding: 1.5rem;
-      margin-top: 2rem;
-      border-radius: 6px;
-    }
-
-    footer {
-      background: #020617;
-      color: #cbd5f5;
-      padding: 2rem;
-      font-size: 0.9rem;
-    }
-
-    footer p {
-      max-width: 1100px;
-      margin: auto;
-    }
-
-    .muted {
-      color: #64748b;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Traffic Impact Decision Toolkit</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
+<body class="bg-gray-50 text-gray-900 font-sans">
 
-<body>
-
-  <!-- HERO -->
-  <header>
-    <h1>TheWiseSphere</h1>
-    <p>
-      Early-stage traffic and site impact exploration tools for developers, planners,
-      and engineers operating in rule-driven environments.
-    </p>
-
-    <div class="notice">
-      <strong>Important Notice:</strong><br />
-      TheWiseSphere provides preliminary, educational decision-support only.
-      A licensed Professional Engineer is required to prepare, seal, and sign
-      all final studies, designs, and documents, with approval from the Authority
-      Having Jurisdiction (AHJ), before any implementation.
+  <!-- Header -->
+  <header class="bg-white shadow">
+    <div class="max-w-6xl mx-auto px-4 py-6 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-gray-900">Traffic Impact Decision Toolkit</h1>
+      <nav class="space-x-6">
+        <a href="#about" class="hover:text-blue-600">About</a>
+        <a href="#features" class="hover:text-blue-600">Benefits</a>
+        <a href="#pricing" class="hover:text-blue-600">Pricing</a>
+        <a href="#contact" class="hover:text-blue-600">Contact</a>
+      </nav>
     </div>
   </header>
 
-  <!-- WHAT WE DO -->
-  <section>
-    <h2>What TheWiseSphere Helps You Understand</h2>
+  <!-- Hero Section -->
+  <section class="bg-blue-50 py-20">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      <h2 class="text-4xl font-extrabold mb-4">Make Confident Traffic Decisions with Ease</h2>
+      <p class="text-lg mb-8 text-gray-700">The Traffic Impact Decision Toolkit helps transportation professionals plan, analyze, and communicate project decisions quickly and confidently — saving time and building trust with clients and reviewers.</p>
+      <a href="#pricing" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700">Get the Toolkit</a>
+    </div>
+  </section>
 
-    <div class="grid">
-      <div class="card">
-        <h3>Early Feasibility</h3>
-        <p>
-          Explore potential traffic and access impacts before investing in full
-          engineering studies or permit submittals.
-        </p>
-      </div>
+  <!-- About Section -->
+  <section id="about" class="py-20">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-bold mb-4">About the Toolkit</h3>
+      <p class="text-gray-700 text-lg mb-6">Designed by experienced transportation engineers, this toolkit gives you practical frameworks, ready-to-use templates, and structured workflows that let you make decisions efficiently, document them clearly, and communicate them confidently to clients, reviewers, and team members.</p>
+    </div>
+  </section>
 
-      <div class="card">
-        <h3>Scenario Awareness</h3>
-        <p>
-          Compare development scenarios to understand how changes in access,
-          scale, or context may affect review complexity.
-        </p>
-      </div>
-
-      <div class="card">
-        <h3>Risk Framing</h3>
-        <p>
-          Identify common triggers, review sensitivities, and areas that
-          frequently require mitigation or variance consideration.
-        </p>
+  <!-- Benefits Section -->
+  <section id="features" class="bg-white py-20">
+    <div class="max-w-6xl mx-auto px-4">
+      <h3 class="text-3xl font-bold text-center mb-12">What You Can Achieve</h3>
+      <div class="grid md:grid-cols-3 gap-8 text-center">
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Make Decisions Faster</h4>
+          <p class="text-gray-700">Use structured frameworks to quickly determine the scope and priority of traffic studies and mitigation measures.</p>
+        </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Increase Confidence</h4>
+          <p class="text-gray-700">Every assumption, calculation, and recommendation is documented clearly, helping you make defensible decisions that clients trust.</p>
+        </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Save Time & Reduce Rework</h4>
+          <p class="text-gray-700">Pre-built templates, checklists, and decision trees reduce hours spent creating reports and responding to reviewers.</p>
+        </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Communicate Clearly</h4>
+          <p class="text-gray-700">Client-ready summaries, spreadsheets, and visualizations make it easy to explain your recommendations effectively.</p>
+        </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Handle Complex Projects</h4>
+          <p class="text-gray-700">Structured guidance helps you evaluate multiple scenarios, balancing LOS, safety, reliability, and cost.</p>
+        </div>
+        <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-2">Scale Your Practice</h4>
+          <p class="text-gray-700">Use the toolkit across multiple projects or teams, creating consistency and efficiency that grows your professional reputation.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- WHAT WE DO NOT DO -->
-  <section>
-    <h2>What This Platform Does Not Do</h2>
-
-    <div class="grid">
-      <div class="card">
-        <p>
-          ❌ Provide engineering advice or professional judgment<br />
-          ❌ Certify compliance or permit approval<br />
-          ❌ Replace licensed consultants or agency review<br />
-          ❌ Issue stamped or sealed documents
-        </p>
-      </div>
-
-      <div class="card">
-        <p>
-          ✔ Support informed discussions with consultants<br />
-          ✔ Improve preparedness before agency coordination<br />
-          ✔ Reduce uncertainty in early planning decisions
-        </p>
+  <!-- Pricing Section -->
+  <section id="pricing" class="bg-blue-50 py-20">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-bold mb-8">Pricing</h3>
+      <div class="grid md:grid-cols-3 gap-8">
+        <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-4">Individual License</h4>
+          <p class="text-4xl font-bold mb-4">$149</p>
+          <p class="text-gray-700 mb-6">Perfect for solo engineers. Includes the full PDF toolkit, decision templates, and checklists to streamline your projects.</p>
+          <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Buy Now</a>
+        </div>
+        <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-4">Professional License</h4>
+          <p class="text-4xl font-bold mb-4">$499</p>
+          <p class="text-gray-700 mb-6">Designed for small teams or consulting firms. Includes all templates, spreadsheets, and multiple user licenses for collaborative work.</p>
+          <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Buy Now</a>
+        </div>
+        <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
+          <h4 class="text-xl font-semibold mb-4">Firm License</h4>
+          <p class="text-4xl font-bold mb-4">$1,500</p>
+          <p class="text-gray-700 mb-6">Full organizational access with team training and priority support. Ideal for mid-size firms or agencies.</p>
+          <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Contact Us</a>
+        </div>
       </div>
     </div>
   </section>
 
-  <!-- CONSULTANT CONNECTION -->
-  <section>
-    <h2>Connecting With Licensed Professionals</h2>
-
-    <p>
-      When you are ready to proceed beyond preliminary exploration,
-      engagement with an independent, licensed traffic engineering consultant
-      is required.
-    </p>
-
-    <p>
-      If desired, TheWiseSphere can assist in facilitating connections to
-      nearby, licensed traffic engineering consultants. Any services,
-      advice, or professional work provided by such consultants are
-      independent of TheWiseSphere.
-    </p>
+  <!-- Contact Section -->
+  <section id="contact" class="py-20">
+    <div class="max-w-4xl mx-auto px-4 text-center">
+      <h3 class="text-3xl font-bold mb-4">Contact Us</h3>
+      <p class="text-gray-700 mb-6">Have questions or want a firm license? Reach out and we’ll get back to you promptly.</p>
+      <form class="space-y-4">
+        <input type="text" placeholder="Your Name" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <input type="email" placeholder="Your Email" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600">
+        <textarea placeholder="Your Message" class="w-full p-3 rounded border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-600 h-32"></textarea>
+        <button type="submit" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700">Send Message</button>
+      </form>
+    </div>
   </section>
 
-  <!-- FOOTER -->
-  <footer>
-    <p>
-      <strong>Disclaimer:</strong> TheWiseSphere provides preliminary,
-      educational tools intended for feasibility and scenario exploration only.
-      Outputs are indicative and must not be relied upon for final design,
-      permitting, or construction decisions. All final determinations must be
-      made by licensed professionals and approved by the Authority Having
-      Jurisdiction.
-    </p>
-    <p class="muted">
-      © 2026 TheWiseSphere. All rights reserved.
-    </p>
+  <!-- Footer -->
+  <footer class="bg-white py-6 mt-20 shadow-inner">
+    <div class="max-w-6xl mx-auto px-4 text-center text-gray-600">
+      &copy; 2026 Traffic Impact Decision Toolkit. All rights reserved.
+    </div>
   </footer>
 
 </body>
