--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class="text-2xl font-bold text-gray-900">Traffic Impact Decision Toolkit</h1>
       <nav class="space-x-6">
         <a href="#about" class="hover:text-blue-600">About</a>
-        <a href="#features" class="hover:text-blue-600">Benefits</a>
+        <a href="#features" class="hover:text-blue-600">Features</a>
         <a href="#pricing" class="hover:text-blue-600">Pricing</a>
         <a href="#contact" class="hover:text-blue-600">Contact</a>
       </nav>
@@ -24,8 +24,8 @@
   <!-- Hero Section -->
   <section class="bg-blue-50 py-20">
     <div class="max-w-6xl mx-auto px-4 text-center">
-      <h2 class="text-4xl font-extrabold mb-4">Make Confident Traffic Decisions with Ease</h2>
-      <p class="text-lg mb-8 text-gray-700">The Traffic Impact Decision Toolkit helps transportation professionals plan, analyze, and communicate project decisions quickly and confidently — saving time and building trust with clients and reviewers.</p>
+      <h2 class="text-4xl font-extrabold mb-4">Defensible Traffic Impact Decisions for Your Projects</h2>
+      <p class="text-lg mb-8 text-gray-700">Practical frameworks used by working transportation professionals to reduce rework, manage risk, and streamline approvals.</p>
       <a href="#pricing" class="bg-blue-600 text-white px-8 py-3 rounded-lg font-semibold hover:bg-blue-700">Get the Toolkit</a>
     </div>
   </section>
@@ -34,38 +34,38 @@
   <section id="about" class="py-20">
     <div class="max-w-4xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-4">About the Toolkit</h3>
-      <p class="text-gray-700 text-lg mb-6">Designed by experienced transportation engineers, this toolkit gives you practical frameworks, ready-to-use templates, and structured workflows that let you make decisions efficiently, document them clearly, and communicate them confidently to clients, reviewers, and team members.</p>
+      <p class="text-gray-700 text-lg mb-6">The Traffic Impact Decision Toolkit is designed for transportation engineers, urban planners, and consultants who need to make **fast, defensible, and high-confidence decisions** on development projects. Avoid over-scoping studies, reduce reviewer challenges, and deliver clear recommendations every time.</p>
     </div>
   </section>
 
-  <!-- Benefits Section -->
+  <!-- Features Section -->
   <section id="features" class="bg-white py-20">
     <div class="max-w-6xl mx-auto px-4">
-      <h3 class="text-3xl font-bold text-center mb-12">What You Can Achieve</h3>
+      <h3 class="text-3xl font-bold text-center mb-12">Toolkit Features</h3>
       <div class="grid md:grid-cols-3 gap-8 text-center">
         <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Make Decisions Faster</h4>
-          <p class="text-gray-700">Use structured frameworks to quickly determine the scope and priority of traffic studies and mitigation measures.</p>
+          <h4 class="text-xl font-semibold mb-2">Scope Decision Framework</h4>
+          <p class="text-gray-700">Determine when a Traffic Impact Analysis is required and how to justify the appropriate scope for any project.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Increase Confidence</h4>
-          <p class="text-gray-700">Every assumption, calculation, and recommendation is documented clearly, helping you make defensible decisions that clients trust.</p>
+          <h4 class="text-xl font-semibold mb-2">Trip Generation & Assumptions</h4>
+          <p class="text-gray-700">Templates and guidance for realistic trip generation, adjusting assumptions, and sensitivity testing for defensible results.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Save Time & Reduce Rework</h4>
-          <p class="text-gray-700">Pre-built templates, checklists, and decision trees reduce hours spent creating reports and responding to reviewers.</p>
+          <h4 class="text-xl font-semibold mb-2">LOS & Mitigation Decisions</h4>
+          <p class="text-gray-700">Frameworks to balance Level of Service (LOS), safety, reliability, and cost-effectiveness in mitigation strategies.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Communicate Clearly</h4>
-          <p class="text-gray-700">Client-ready summaries, spreadsheets, and visualizations make it easy to explain your recommendations effectively.</p>
+          <h4 class="text-xl font-semibold mb-2">Executive Summary Templates</h4>
+          <p class="text-gray-700">Client-ready summary templates and communication tools to justify decisions and respond to reviewers efficiently.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Handle Complex Projects</h4>
-          <p class="text-gray-700">Structured guidance helps you evaluate multiple scenarios, balancing LOS, safety, reliability, and cost.</p>
+          <h4 class="text-xl font-semibold mb-2">Decision Trees & Checklists</h4>
+          <p class="text-gray-700">Step-by-step decision trees and checklists to systematically evaluate every traffic and development scenario.</p>
         </div>
         <div class="p-6 bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
-          <h4 class="text-xl font-semibold mb-2">Scale Your Practice</h4>
-          <p class="text-gray-700">Use the toolkit across multiple projects or teams, creating consistency and efficiency that grows your professional reputation.</p>
+          <h4 class="text-xl font-semibold mb-2">Excel & Word Tools</h4>
+          <p class="text-gray-700">Ready-to-use spreadsheets and report templates to streamline your workflow and save hours on each project.</p>
         </div>
       </div>
     </div>
@@ -79,19 +79,19 @@
         <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
           <h4 class="text-xl font-semibold mb-4">Individual License</h4>
           <p class="text-4xl font-bold mb-4">$149</p>
-          <p class="text-gray-700 mb-6">Perfect for solo engineers. Includes the full PDF toolkit, decision templates, and checklists to streamline your projects.</p>
+          <p class="text-gray-700 mb-6">Perfect for solo engineers or consultants. Includes full PDF playbook, decision templates, and checklists.</p>
           <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Buy Now</a>
         </div>
         <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
           <h4 class="text-xl font-semibold mb-4">Professional License</h4>
           <p class="text-4xl font-bold mb-4">$499</p>
-          <p class="text-gray-700 mb-6">Designed for small teams or consulting firms. Includes all templates, spreadsheets, and multiple user licenses for collaborative work.</p>
+          <p class="text-gray-700 mb-6">Ideal for small firms or teams. Includes all tools, spreadsheets, templates, and multiple user licenses.</p>
           <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Buy Now</a>
         </div>
         <div class="bg-white p-8 rounded-lg shadow hover:shadow-lg transition">
           <h4 class="text-xl font-semibold mb-4">Firm License</h4>
           <p class="text-4xl font-bold mb-4">$1,500</p>
-          <p class="text-gray-700 mb-6">Full organizational access with team training and priority support. Ideal for mid-size firms or agencies.</p>
+          <p class="text-gray-700 mb-6">Full organizational access, team training, and priority support. Ideal for mid-size firms or agencies.</p>
           <a href="#" class="bg-blue-600 text-white px-6 py-3 rounded-lg font-semibold hover:bg-blue-700">Contact Us</a>
         </div>
       </div>
